feat: update casandra api
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>