@@ -20,11 +20,10 @@ import com.datastax.oss.driver.api.core.CqlSession;
 import jakarta.data.exceptions.NonUniqueResultException;
 import org.assertj.core.api.SoftAssertions;
 import org.eclipse.jnosql.communication.Value;
-import org.eclipse.jnosql.communication.column.Column;
-import org.eclipse.jnosql.communication.column.ColumnDeleteQuery;
-import org.eclipse.jnosql.communication.column.ColumnEntity;
-import org.eclipse.jnosql.communication.column.ColumnQuery;
-import org.eclipse.jnosql.communication.column.Columns;
+import org.eclipse.jnosql.communication.semistructured.CommunicationEntity;
+import org.eclipse.jnosql.communication.semistructured.Element;
+import org.eclipse.jnosql.communication.semistructured.Elements;
+import org.eclipse.jnosql.communication.semistructured.SelectQuery;
 import org.junit.Assert;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
@@ -49,10 +48,10 @@ import static java.util.Collections.singletonList;
 import static java.util.Collections.singletonMap;
 import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.eclipse.jnosql.communication.column.ColumnDeleteQuery.delete;
-import static org.eclipse.jnosql.communication.column.ColumnQuery.select;
 import static org.eclipse.jnosql.communication.driver.IntegrationTest.MATCHES;
 import static org.eclipse.jnosql.communication.driver.IntegrationTest.NAMED;
+import static org.eclipse.jnosql.communication.semistructured.DeleteQuery.delete;
+import static org.eclipse.jnosql.communication.semistructured.SelectQuery.select;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -91,8 +90,8 @@ public class CassandraColumnManagerTest {
 
     @Test
     void shouldInsertJustKey() {
-        Column key = Columns.of("id", 10L);
-        ColumnEntity columnEntity = ColumnEntity.of(Constants.COLUMN_FAMILY);
+        Element key = Elements.of("id", 10L);
+        var columnEntity = CommunicationEntity.of(Constants.COLUMN_FAMILY);
         columnEntity.add(key);
         entityManager.insert(columnEntity);
     }
@@ -100,18 +99,18 @@ public class CassandraColumnManagerTest {
 
     @Test
     void shouldInsertColumns() {
-        ColumnEntity columnEntity = getColumnFamily();
+        var columnEntity = getColumnFamily();
         entityManager.insert(columnEntity);
     }
 
     @Test
     void shouldInsertWithTtl() throws InterruptedException {
-        ColumnEntity columnEntity = getColumnFamily();
+        var columnEntity = getColumnFamily();
         entityManager.insert(columnEntity, Duration.ofSeconds(1L));
 
         sleep(2_000L);
 
-        List<ColumnEntity> entities = entityManager.select(select().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build())
+        List<CommunicationEntity> entities = entityManager.select(select().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build())
                 .collect(toList());
         assertTrue(entities.isEmpty());
     }
@@ -122,7 +121,7 @@ public class CassandraColumnManagerTest {
 
         sleep(2_000L);
 
-        List<ColumnEntity> entities = entityManager.select(select().from(Constants.COLUMN_FAMILY).build())
+        List<CommunicationEntity> entities = entityManager.select(select().from(Constants.COLUMN_FAMILY).build())
                 .collect(toList());
         assertTrue(entities.isEmpty());
     }
@@ -130,7 +129,7 @@ public class CassandraColumnManagerTest {
     @Test
     void shouldReturnErrorWhenInsertWithColumnNull() {
 
-        assertThrows(NullPointerException.class, () -> entityManager.insert((ColumnEntity) null));
+        assertThrows(NullPointerException.class, () -> entityManager.insert((CommunicationEntity) null));
     }
 
     @Test
@@ -144,13 +143,13 @@ public class CassandraColumnManagerTest {
     @Test
     void shouldReturnErrorWhenInsertWithColumnsNull() {
 
-        assertThrows(NullPointerException.class, () -> entityManager.insert((Iterable<ColumnEntity>) null));
+        assertThrows(NullPointerException.class, () -> entityManager.insert((Iterable<CommunicationEntity>) null));
     }
 
 
     @Test
     void shouldInsertColumnsWithConsistencyLevel() {
-        ColumnEntity columnEntity = getColumnFamily();
+        var columnEntity = getColumnFamily();
         entityManager.save(columnEntity, CONSISTENCY_LEVEL);
     }
 
@@ -158,18 +157,18 @@ public class CassandraColumnManagerTest {
     @Test
     void shouldReturnErrorWhenUpdateWithColumnsNull() {
 
-        assertThrows(NullPointerException.class, () -> entityManager.update((Iterable<ColumnEntity>) null));
+        assertThrows(NullPointerException.class, () -> entityManager.update((Iterable<CommunicationEntity>) null));
 
     }
 
     @Test
     void shouldReturnErrorWhenUpdateWithColumnNull() {
-        assertThrows(NullPointerException.class, () -> entityManager.update((ColumnEntity) null));
+        assertThrows(NullPointerException.class, () -> entityManager.update((CommunicationEntity) null));
     }
 
     @Test
     void shouldUpdateColumn() {
-        ColumnEntity columnEntity = getColumnFamily();
+        var columnEntity = getColumnFamily();
         entityManager.update(columnEntity);
     }
 
@@ -180,7 +179,7 @@ public class CassandraColumnManagerTest {
 
     @Test
     void shouldReturnErrorWhenSaveHasNullElement() {
-        assertThrows(NullPointerException.class, () -> entityManager.save((ColumnEntity) null, Duration.ofSeconds(1L), ConsistencyLevel.ALL));
+        assertThrows(NullPointerException.class, () -> entityManager.save((CommunicationEntity) null, Duration.ofSeconds(1L), ConsistencyLevel.ALL));
 
         assertThrows(NullPointerException.class, () -> entityManager.save(getColumnFamily(), null, ConsistencyLevel.ALL));
 
@@ -189,7 +188,7 @@ public class CassandraColumnManagerTest {
 
     @Test
     void shouldReturnErrorWhenSaveIterableHasNullElement() {
-        assertThrows(NullPointerException.class, () -> entityManager.save((List<ColumnEntity>) null, Duration.ofSeconds(1L), ConsistencyLevel.ALL));
+        assertThrows(NullPointerException.class, () -> entityManager.save((List<CommunicationEntity>) null, Duration.ofSeconds(1L), ConsistencyLevel.ALL));
 
         assertThrows(NullPointerException.class, () -> entityManager.save(getEntities(), null, ConsistencyLevel.ALL));
 
@@ -198,20 +197,20 @@ public class CassandraColumnManagerTest {
 
     @Test
     void shouldFindAll() {
-        ColumnEntity columnEntity = getColumnFamily();
+        var columnEntity = getColumnFamily();
         entityManager.insert(columnEntity);
 
-        ColumnQuery query = select().from(columnEntity.name()).build();
-        List<ColumnEntity> entities = entityManager.select(query).collect(toList());
+        var query = select().from(columnEntity.name()).build();
+        List<CommunicationEntity> entities = entityManager.select(query).collect(toList());
         assertFalse(entities.isEmpty());
     }
 
     @Test
     void shouldReturnSingleResult() {
-        ColumnEntity columnEntity = getColumnFamily();
+        var columnEntity = getColumnFamily();
         entityManager.insert(columnEntity);
-        ColumnQuery query = select().from(columnEntity.name()).where("id").eq(10L).build();
-        Optional<ColumnEntity> entity = entityManager.singleResult(query);
+        var query = select().from(columnEntity.name()).where("id").eq(10L).build();
+        Optional<CommunicationEntity> entity = entityManager.singleResult(query);
 
         query = select().from(columnEntity.name()).where("id").eq(-10L).build();
         entity = entityManager.singleResult(query);
@@ -222,7 +221,7 @@ public class CassandraColumnManagerTest {
     @Test
     void shouldReturnErrorWhenThereIsNotThanOneResultInSingleResult() {
         entityManager.insert(getEntities());
-        ColumnQuery query = select().from(Constants.COLUMN_FAMILY).build();
+        var query = select().from(Constants.COLUMN_FAMILY).build();
         assertThrows(NonUniqueResultException.class, () -> entityManager.singleResult(query));
     }
 
@@ -239,13 +238,13 @@ public class CassandraColumnManagerTest {
 
         entityManager.insert(getColumnFamily());
 
-        ColumnQuery query = select().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build();
-        List<ColumnEntity> columnEntity = entityManager.select(query).collect(toList());
+        var query = select().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build();
+        List<CommunicationEntity> columnEntity = entityManager.select(query).collect(toList());
         assertFalse(columnEntity.isEmpty());
-        List<Column> columns = columnEntity.get(0).columns();
-        assertThat(columns.stream().map(Column::name).collect(toList()))
+        List<Element> columns = columnEntity.get(0).elements();
+        assertThat(columns.stream().map(Element::name).collect(toList()))
                 .contains("name", "version", "options", "id");
-        assertThat(columns.stream().map(Column::value).map(Value::get).collect(toList())).contains
+        assertThat(columns.stream().map(Element::value).map(Value::get).collect(toList())).contains
                 ("Cassandra", 3.2, asList(1, 2, 3), 10L);
 
     }
@@ -254,12 +253,12 @@ public class CassandraColumnManagerTest {
     void shouldFindByIdWithConsistenceLevel() {
 
         entityManager.insert(getColumnFamily());
-        ColumnQuery query = select().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build();
-        List<ColumnEntity> columnEntity = entityManager.select(query, CONSISTENCY_LEVEL).collect(toList());
+        var query = select().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build();
+        List<CommunicationEntity> columnEntity = entityManager.select(query, CONSISTENCY_LEVEL).collect(toList());
         assertFalse(columnEntity.isEmpty());
-        List<Column> columns = columnEntity.get(0).columns();
-        assertThat(columns.stream().map(Column::name).collect(toList())).contains("name", "version", "options", "id");
-        assertThat(columns.stream().map(Column::value).map(Value::get).collect(toList()))
+        List<Element> columns = columnEntity.get(0).elements();
+        assertThat(columns.stream().map(Element::name).collect(toList())).contains("name", "version", "options", "id");
+        assertThat(columns.stream().map(Element::value).map(Value::get).collect(toList()))
                 .contains("Cassandra", 3.2, asList(1, 2, 3), 10L);
 
     }
@@ -267,12 +266,12 @@ public class CassandraColumnManagerTest {
     @Test
     void shouldRunNativeQuery() {
         entityManager.insert(getColumnFamily());
-        List<ColumnEntity> entities = entityManager.cql("select * from newKeySpace.newColumnFamily where id=10;")
-                .collect(toList());
+        List<CommunicationEntity> entities = entityManager.cql("select * from newKeySpace.newColumnFamily where id=10;")
+                .toList();
         assertFalse(entities.isEmpty());
-        List<Column> columns = entities.get(0).columns();
-        assertThat(columns.stream().map(Column::name).collect(toList())).contains("name", "version", "options", "id");
-        assertThat(columns.stream().map(Column::value).map(Value::get).collect(toList()))
+        List<Element> columns = entities.get(0).elements();
+        assertThat(columns.stream().map(Element::name).collect(toList())).contains("name", "version", "options", "id");
+        assertThat(columns.stream().map(Element::value).map(Value::get).collect(toList()))
                 .contains("Cassandra", 3.2, asList(1, 2, 3), 10L);
     }
 
@@ -280,12 +279,12 @@ public class CassandraColumnManagerTest {
     void shouldRunNativeQuery2() {
         entityManager.insert(getColumnFamily());
         String query = "select * from newKeySpace.newColumnFamily where id = :id;";
-        List<ColumnEntity> entities = entityManager.cql(query, singletonMap("id", 10L)).collect(toList());
+        List<CommunicationEntity> entities = entityManager.cql(query, singletonMap("id", 10L)).collect(toList());
         assertFalse(entities.isEmpty());
-        List<Column> columns = entities.get(0).columns();
-        assertThat(columns.stream().map(Column::name).collect(toList()))
+        List<Element> columns = entities.get(0).elements();
+        assertThat(columns.stream().map(Element::name).collect(toList()))
                 .contains("name", "version", "options", "id");
-        assertThat(columns.stream().map(Column::value).map(Value::get).collect(toList()))
+        assertThat(columns.stream().map(Element::value).map(Value::get).collect(toList()))
                 .contains("Cassandra", 3.2, asList(1, 2, 3), 10L);
     }
 
@@ -294,23 +293,23 @@ public class CassandraColumnManagerTest {
         entityManager.insert(getColumnFamily());
         CassandraPreparedStatement preparedStatement = entityManager.nativeQueryPrepare("select * from newKeySpace.newColumnFamily where id=?");
         preparedStatement.bind(10L);
-        List<ColumnEntity> entities = preparedStatement.executeQuery().collect(toList());
-        List<Column> columns = entities.get(0).columns();
-        assertThat(columns.stream().map(Column::name).collect(toList()))
+        List<CommunicationEntity> entities = preparedStatement.executeQuery().collect(toList());
+        List<Element> columns = entities.get(0).elements();
+        assertThat(columns.stream().map(Element::name).collect(toList()))
                 .contains("name", "version", "options", "id");
-        assertThat(columns.stream().map(Column::value).map(Value::get)
+        assertThat(columns.stream().map(Element::value).map(Value::get)
                 .collect(toList())).contains("Cassandra", 3.2, asList(1, 2, 3), 10L);
     }
 
     @Test
     void shouldDeleteColumnFamily() {
         entityManager.insert(getColumnFamily());
-        ColumnEntity.of(Constants.COLUMN_FAMILY, singletonList(Columns.of("id", 10L)));
-        ColumnQuery query = select().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build();
-        ColumnDeleteQuery deleteQuery = delete().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build();
+        CommunicationEntity.of(Constants.COLUMN_FAMILY, singletonList(Elements.of("id", 10L)));
+        var query = select().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build();
+        var deleteQuery = delete().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build();
         entityManager.delete(deleteQuery);
-        List<ColumnEntity> entities = entityManager.cql("select * from newKeySpace.newColumnFamily where id=10;")
-                .collect(toList());
+        List<CommunicationEntity> entities = entityManager.cql("select * from newKeySpace.newColumnFamily where id=10;")
+                .toList();
         assertTrue(entities.isEmpty());
     }
 
@@ -327,32 +326,32 @@ public class CassandraColumnManagerTest {
     @Test
     void shouldDeleteColumnFamilyWithConsistencyLevel() {
         entityManager.insert(getColumnFamily());
-        ColumnEntity.of(Constants.COLUMN_FAMILY, singletonList(Columns.of("id", 10L)));
-        ColumnDeleteQuery deleteQuery = delete().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build();
+        CommunicationEntity.of(Constants.COLUMN_FAMILY, singletonList(Elements.of("id", 10L)));
+        var deleteQuery = delete().from(Constants.COLUMN_FAMILY).where("id").eq(10L).build();
         entityManager.delete(deleteQuery, CONSISTENCY_LEVEL);
-        List<ColumnEntity> entities = entityManager.cql("select * from newKeySpace.newColumnFamily where id=10;")
-                .collect(toList());
+        List<CommunicationEntity> entities = entityManager.cql("select * from newKeySpace.newColumnFamily where id=10;")
+                .toList();
         assertTrue(entities.isEmpty());
     }
 
     @Test
     void shouldLimitResult() {
         getEntities().forEach(entityManager::insert);
-        ColumnQuery query = select().from(Constants.COLUMN_FAMILY).where("id").in(Arrays.asList(1L, 2L, 3L))
+        var query = select().from(Constants.COLUMN_FAMILY).where("id").in(Arrays.asList(1L, 2L, 3L))
                 .limit(2).build();
-        List<ColumnEntity> columnFamilyEntities = entityManager.select(query).collect(toList());
+        List<CommunicationEntity> columnFamilyEntities = entityManager.select(query).collect(toList());
         assertEquals(Integer.valueOf(2), Integer.valueOf(columnFamilyEntities.size()));
     }
 
-    private List<ColumnEntity> getEntities() {
+    private List<CommunicationEntity> getEntities() {
         Map<String, Object> fields = new HashMap<>();
         fields.put("name", "Cassandra");
         fields.put("version", 3.2);
         fields.put("options", asList(1, 2, 3));
-        List<Column> columns = Columns.of(fields);
-        ColumnEntity entity = ColumnEntity.of(Constants.COLUMN_FAMILY, singletonList(Columns.of("id", 1L)));
-        ColumnEntity entity1 = ColumnEntity.of(Constants.COLUMN_FAMILY, singletonList(Columns.of("id", 2L)));
-        ColumnEntity entity2 = ColumnEntity.of(Constants.COLUMN_FAMILY, singletonList(Columns.of("id", 3L)));
+        List<Element> columns = Elements.of(fields);
+        var entity = CommunicationEntity.of(Constants.COLUMN_FAMILY, singletonList(Elements.of("id", 1L)));
+        var entity1 = CommunicationEntity.of(Constants.COLUMN_FAMILY, singletonList(Elements.of("id", 2L)));
+        var entity2 = CommunicationEntity.of(Constants.COLUMN_FAMILY, singletonList(Elements.of("id", 3L)));
         columns.forEach(entity::add);
         columns.forEach(entity1::add);
         columns.forEach(entity2::add);
@@ -361,92 +360,92 @@ public class CassandraColumnManagerTest {
 
     @Test
     void shouldSupportUDT() {
-        ColumnEntity entity = ColumnEntity.of("users");
-        entity.add(Column.of("nickname", "ada"));
-        List<Column> columns = new ArrayList<>();
-        columns.add(Column.of("firstname", "Ada"));
-        columns.add(Column.of("lastname", "Lovelace"));
+        var entity = CommunicationEntity.of("users");
+        entity.add(Element.of("nickname", "ada"));
+        List<Element> columns = new ArrayList<>();
+        columns.add(Element.of("firstname", "Ada"));
+        columns.add(Element.of("lastname", "Lovelace"));
         UDT udt = UDT.builder("fullname").withName("name")
                 .addUDT(columns).build();
         entity.add(udt);
         entityManager.insert(entity);
 
-        ColumnQuery query = select().from("users").build();
-        ColumnEntity columnEntity = entityManager.singleResult(query).get();
-        Column column = columnEntity.find("name").get();
+        var query = select().from("users").build();
+        var columnEntity = entityManager.singleResult(query).get();
+        var column = columnEntity.find("name").get();
         udt = UDT.class.cast(column);
-        List<Column> udtColumns = (List<Column>) udt.get();
+        List<Element> udtColumns = (List<Element>) udt.get();
         assertEquals("name", udt.name());
         assertEquals("fullname", udt.userType());
-        assertThat(udtColumns).contains(Column.of("firstname", "Ada"),
-                Column.of("lastname", "Lovelace"));
+        assertThat(udtColumns).contains(Element.of("firstname", "Ada"),
+                Element.of("lastname", "Lovelace"));
     }
 
     @Test
     void shouldSupportAnUDTElement() {
-        ColumnEntity entity = ColumnEntity.of("users");
-        entity.add(Column.of("nickname", "Ioda"));
-        List<Column> columns = new ArrayList<>();
-        columns.add(Column.of("firstname", "Ioda"));
+        var entity = CommunicationEntity.of("users");
+        entity.add(Element.of("nickname", "Ioda"));
+        List<Element> columns = new ArrayList<>();
+        columns.add(Element.of("firstname", "Ioda"));
         UDT udt = UDT.builder("fullname").withName("name")
                 .addUDT(columns).build();
         entity.add(udt);
         entityManager.insert(entity);
 
-        ColumnQuery query = select().from("users")
+        var query = select().from("users")
                 .where("nickname").eq("Ioda")
                 .build();
 
-        ColumnEntity columnEntity = entityManager.singleResult(query).get();
-        Column column = columnEntity.find("name").get();
+        var columnEntity = entityManager.singleResult(query).get();
+        Element column = columnEntity.find("name").get();
         udt = UDT.class.cast(column);
-        List<Column> udtColumns = (List<Column>) udt.get();
+        List<Element> udtColumns = (List<Element>) udt.get();
         assertEquals("name", udt.name());
         assertEquals("fullname", udt.userType());
-        assertThat(udtColumns).contains(Column.of("firstname", "Ioda"));
+        assertThat(udtColumns).contains(Element.of("firstname", "Ioda"));
     }
 
 
     @Test
     void shouldSupportDate() {
-        ColumnEntity entity = ColumnEntity.of("history");
-        entity.add(Column.of("name", "World war II"));
+        var entity = CommunicationEntity.of("history");
+        entity.add(Element.of("name", "World war II"));
         ZoneId defaultZoneId = ZoneId.systemDefault();
         Instant dateEnd = LocalDate.of(1945, Month.SEPTEMBER, 2).atStartOfDay(defaultZoneId).toInstant();
         LocalDateTime dataStart = LocalDateTime.now();
-        entity.add(Column.of("dataStart", LocalDate.of(1939, 9, 1)));
-        entity.add(Column.of("dateEnd", dateEnd));
+        entity.add(Element.of("dataStart", LocalDate.of(1939, 9, 1)));
+        entity.add(Element.of("dateEnd", dateEnd));
         entityManager.insert(entity);
-        ColumnQuery query = select().from("history")
+        var query = select().from("history")
                 .where("name").eq("World war II")
                 .build();
 
-        ColumnEntity entity1 = entityManager.singleResult(query).get();
+        var entity1 = entityManager.singleResult(query).get();
         assertNotNull(entity1);
 
     }
 
     @Test
     void shouldSupportListUDTs() {
-        ColumnEntity entity = createEntityWithIterable();
+        var entity = createEntityWithIterable();
         entityManager.insert(entity);
     }
 
     @Test
     void shouldReturnListUDT() {
-        ColumnEntity entity = createEntityWithIterable();
+        var entity = createEntityWithIterable();
         entityManager.insert(entity);
 
-        ColumnQuery query = select().from("contacts").where("user").eq("otaviojava").build();
-        ColumnEntity columnEntity = entityManager.singleResult(query).get();
-        List<List<Column>> names = (List<List<Column>>) columnEntity.find("names").get().get();
+        var query = select().from("contacts").where("user").eq("otaviojava").build();
+        var columnEntity = entityManager.singleResult(query).get();
+        List<List<Element>> names = (List<List<Element>>) columnEntity.find("names").get().get();
         assertEquals(3, names.size());
         assertTrue(names.stream().allMatch(n -> n.size() == 2));
     }
 
     @Test
     void shouldCount() {
-        ColumnEntity entity = createEntityWithIterable();
+        var entity = createEntityWithIterable();
         entityManager.insert(entity);
         long contacts = entityManager.count("contacts");
         assertTrue(contacts > 0);
@@ -455,17 +454,17 @@ public class CassandraColumnManagerTest {
    @Test
     void shouldPagingState() {
         for (long index = 1; index <= 10; index++) {
-            ColumnEntity columnFamily = getColumnFamily();
+            var columnFamily = getColumnFamily();
             columnFamily.add("id", index);
             entityManager.insert(columnFamily);
         }
 
-        ColumnQuery query = select().from(Constants.COLUMN_FAMILY).build();
+        var query = select().from(Constants.COLUMN_FAMILY).build();
         CassandraQuery cassandraQuery = CassandraQuery.of(query);
 
         assertFalse(cassandraQuery.getPagingState().isPresent());
 
-        List<ColumnEntity> entities = entityManager.select(cassandraQuery).collect(toList());
+        List<CommunicationEntity> entities = entityManager.select(cassandraQuery).collect(toList());
         assertEquals(10, entities.size());
         assertTrue(cassandraQuery.getPagingState().isPresent());
     }
@@ -473,25 +472,25 @@ public class CassandraColumnManagerTest {
     @Test
     void shouldPaginate() {
         for (long index = 1; index <= 10; index++) {
-            ColumnEntity columnFamily = getColumnFamily();
+            var columnFamily = getColumnFamily();
             columnFamily.add("id", index);
             entityManager.insert(columnFamily);
         }
 
-        ColumnQuery query = select().from(Constants.COLUMN_FAMILY).limit(4).skip(2).build();
-        List<ColumnEntity> entities = entityManager.select(query).collect(toList());
+        var query = select().from(Constants.COLUMN_FAMILY).limit(4).skip(2).build();
+        List<CommunicationEntity> entities = entityManager.select(query).toList();
         assertEquals(4, entities.size());
     }
 
     @Test
     void shouldCreateUDTWithSet() {
-        ColumnEntity entity = createEntityWithIterableSet();
+        var entity = createEntityWithIterableSet();
         entityManager.insert(entity);
-        ColumnQuery query = ColumnQuery.select().from("agenda").build();
-        final ColumnEntity result = entityManager.singleResult(query).get();
-        Assert.assertEquals(Column.of("user", "otaviojava"), result.find("user").get());
+        SelectQuery query = select().from("agenda").build();
+        var result = entityManager.singleResult(query).get();
+        Assert.assertEquals(Element.of("user", "otaviojava"), result.find("user").get());
         Assert.assertEquals(2, result.size());
-        List<List<Column>> names = (List<List<Column>>) result.find("names").get().get();
+        List<List<Element>> names = (List<List<Element>>) result.find("names").get().get();
         assertEquals(3, names.size());
         assertTrue(names.stream().allMatch(n -> n.size() == 2));
     }
@@ -499,12 +498,12 @@ public class CassandraColumnManagerTest {
     @Test
     void shouldInsertNullValues(){
         var family = getColumnFamily();
-        family.add(Column.of("name", null));
-        ColumnEntity columnEntity = entityManager.insert(family);
+        family.add(Element.of("name", null));
+        var columnEntity = entityManager.insert(family);
         var column = columnEntity.find("name");
         SoftAssertions.assertSoftly(soft -> {
-            soft.assertThat(column).get().extracting(Column::name).isEqualTo("name");
-            soft.assertThat(column).get().extracting(Column::get).isNull();
+            soft.assertThat(column).get().extracting(Element::name).isEqualTo("name");
+            soft.assertThat(column).get().extracting(Element::get).isNull();
         });
     }
 
@@ -513,49 +512,49 @@ public class CassandraColumnManagerTest {
         var family = getColumnFamily();
         entityManager.insert(family);
         family.addNull("name");
-        ColumnEntity columnEntity = entityManager.update(family);
+        var columnEntity = entityManager.update(family);
         var column = columnEntity.find("name");
         SoftAssertions.assertSoftly(soft -> {
-            soft.assertThat(column).get().extracting(Column::name).isEqualTo("name");
-            soft.assertThat(column).get().extracting(Column::get).isNull();
+            soft.assertThat(column).get().extracting(Element::name).isEqualTo("name");
+            soft.assertThat(column).get().extracting(Element::get).isNull();
         });
     }
 
-    private ColumnEntity createEntityWithIterable() {
-        ColumnEntity entity = ColumnEntity.of("contacts");
-        entity.add(Column.of("user", "otaviojava"));
+    private CommunicationEntity createEntityWithIterable() {
+        var entity = CommunicationEntity.of("contacts");
+        entity.add(Element.of("user", "otaviojava"));
 
-        List<Iterable<Column>> columns = new ArrayList<>();
-        columns.add(asList(Column.of("firstname", "Poliana"), Column.of("lastname", "Santana")));
-        columns.add(asList(Column.of("firstname", "Ada"), Column.of("lastname", "Lovelace")));
-        columns.add(asList(Column.of("firstname", "Maria"), Column.of("lastname", "Goncalves")));
+        List<Iterable<Element>> columns = new ArrayList<>();
+        columns.add(asList(Element.of("firstname", "Poliana"), Element.of("lastname", "Santana")));
+        columns.add(asList(Element.of("firstname", "Ada"), Element.of("lastname", "Lovelace")));
+        columns.add(asList(Element.of("firstname", "Maria"), Element.of("lastname", "Goncalves")));
         UDT udt = UDT.builder("fullname").withName("names")
                 .addUDTs(columns).build();
         entity.add(udt);
         return entity;
     }
 
-    private ColumnEntity createEntityWithIterableSet() {
-        ColumnEntity entity = ColumnEntity.of("agenda");
-        entity.add(Column.of("user", "otaviojava"));
+    private CommunicationEntity createEntityWithIterableSet() {
+        var entity = CommunicationEntity.of("agenda");
+        entity.add(Element.of("user", "otaviojava"));
 
-        List<Iterable<Column>> columns = new ArrayList<>();
-        columns.add(asList(Column.of("firstname", "Poliana"), Column.of("lastname", "Santana")));
-        columns.add(asList(Column.of("firstname", "Ada"), Column.of("lastname", "Lovelace")));
-        columns.add(asList(Column.of("firstname", "Maria"), Column.of("lastname", "Goncalves")));
+        List<Iterable<Element>> columns = new ArrayList<>();
+        columns.add(asList(Element.of("firstname", "Poliana"), Element.of("lastname", "Santana")));
+        columns.add(asList(Element.of("firstname", "Ada"), Element.of("lastname", "Lovelace")));
+        columns.add(asList(Element.of("firstname", "Maria"), Element.of("lastname", "Goncalves")));
         UDT udt = UDT.builder("fullname").withName("names")
                 .addUDTs(columns).build();
         entity.add(udt);
         return entity;
     }
 
-    private ColumnEntity getColumnFamily() {
+    private CommunicationEntity getColumnFamily() {
         Map<String, Object> fields = new HashMap<>();
         fields.put("name", "Cassandra");
         fields.put("version", 3.2);
         fields.put("options", asList(1, 2, 3));
-        List<Column> columns = Columns.of(fields);
-        ColumnEntity columnFamily = ColumnEntity.of(Constants.COLUMN_FAMILY, singletonList(Columns.of("id", 10L)));
+        List<Element> columns = Elements.of(fields);
+        var columnFamily = CommunicationEntity.of(Constants.COLUMN_FAMILY, singletonList(Elements.of("id", 10L)));
         columns.forEach(columnFamily::add);
         return columnFamily;
     }
